<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:padding="@dimen/dp16"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:text="@string/str_choose_country"
        android:textColor="@color/color_text_blue"
        android:textSize="@dimen/sp18"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/iv_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_back" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_back">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp16"
                android:layout_marginVertical="@dimen/dp16"
                android:background="@color/white"
                app:cardCornerRadius="@dimen/dp15"
                app:cardElevation="@dimen/dp2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/dp16">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_new_confirmed"
                        android:textColor="@color/black_60"
                        android:textSize="@dimen/sp13"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_cases_today"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp16"
                        android:gravity="center"
                        android:textColor="@color/color_blue"
                        android:textSize="@dimen/sp16"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp16"
                android:layout_marginVertical="@dimen/dp16"
                android:background="@color/white"
                app:cardCornerRadius="@dimen/dp15"
                app:cardElevation="@dimen/dp2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/dp16">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_confirmed"
                        android:textColor="@color/black_60"
                        android:textSize="@dimen/sp13"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_cases"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp16"
                        android:gravity="center"
                        android:textColor="@color/color_blue"
                        android:textSize="@dimen/sp16"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp16"
                android:layout_marginVertical="@dimen/dp16"
                android:background="@color/white"
                app:cardCornerRadius="@dimen/dp15"
                app:cardElevation="@dimen/dp2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/dp16">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_treating"
                        android:textAllCaps="true"
                        android:textColor="@color/black_60"
                        android:textSize="@dimen/sp13"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_treating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp16"
                        android:gravity="center"
                        android:textColor="@color/color_blue"
                        android:textSize="@dimen/sp16"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp16"
                android:layout_marginVertical="@dimen/dp16"
                android:background="@color/white"
                app:cardCornerRadius="@dimen/dp15"
                app:cardElevation="@dimen/dp2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/dp16">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_recovered"
                        android:textAllCaps="true"
                        android:textColor="@color/black_60"
                        android:textSize="@dimen/sp13"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_recovered"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp16"
                        android:gravity="center"
                        android:textColor="@color/color_green"
                        android:textSize="@dimen/sp16"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp16"
                android:layout_marginVertical="@dimen/dp16"
                android:background="@color/white"
                app:cardCornerRadius="@dimen/dp15"
                app:cardElevation="@dimen/dp2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/dp16">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_deaths"
                        android:textColor="@color/black_60"
                        android:textAllCaps="true"
                        android:textSize="@dimen/sp13"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_death"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp16"
                        android:gravity="center"
                        android:textColor="@color/color_red"
                        android:textSize="@dimen/sp16"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>